// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single testimonial correctly 1`] = `
.c3 ul {
  padding-left: 0;
  list-style: none;
}

.c3 ul li {
  position: relative;
  padding-left: 40px;
}

.c3 ul li::before {
  content: ' ';
  position: absolute;
  top: 8px;
  left: 10px;
  display: block;
  width: 10px;
  height: 10px;
  background: #212122;
}

.c3 ul li ul {
  padding-left: 0;
  list-style: none;
}

.c3 ul li ul li:before {
  background: transparent;
  border: 1px solid #212122;
}

.c3 ol li::before {
  min-width: 10px;
}

.c3 blockquote {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-right: 20px;
  margin-bottom: 0;
  padding: 60px 20px 20px 20px;
  border-left: 4px solid #ea232d;
  font-size: 1.35em;
  font-weight: 300;
}

.c3 blockquote:before {
  content: '';
  display: block;
  position: absolute;
  width: 30px;
  height: 30px;
  background-image: url(test-file-stub);
  top: 10px;
  left: 20px;
  color: #ea232d;
}

.c0 {
  margin-bottom: 30px;
}

.c2 {
  position: relative;
  width: 90%;
  background-color: #fff;
  padding: 30px;
  margin: -30px auto 0;
}

.c4 {
  color: #ea232d;
  font-style: italic;
}

@media (min-width:40.0625em) {
  .c0 {
    margin-bottom: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:40.0625em) {
  .c1 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media (min-width:40.0625em) {
  .c2 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    margin: 0;
    margin-left: 30px;
    margin-right: -30px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Collection hero"
      src="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550"
      srcSet="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550 480w,
        //images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550"
    />
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <p>
        Some body text
      </p>
      <h2>
        Some header text
      </h2>
      <p>
        <b>
          some bollld text
        </b>
      </p>
    </div>
    <span
      className="c4"
    >
      — 
      Owen, London
    </span>
  </div>
</div>
`;

exports[`renders testimonials correctly 1`] = `
.c5 ul {
  padding-left: 0;
  list-style: none;
}

.c5 ul li {
  position: relative;
  padding-left: 40px;
}

.c5 ul li::before {
  content: ' ';
  position: absolute;
  top: 8px;
  left: 10px;
  display: block;
  width: 10px;
  height: 10px;
  background: #212122;
}

.c5 ul li ul {
  padding-left: 0;
  list-style: none;
}

.c5 ul li ul li:before {
  background: transparent;
  border: 1px solid #212122;
}

.c5 ol li::before {
  min-width: 10px;
}

.c5 blockquote {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-right: 20px;
  margin-bottom: 0;
  padding: 60px 20px 20px 20px;
  border-left: 4px solid #ea232d;
  font-size: 1.35em;
  font-weight: 300;
}

.c5 blockquote:before {
  content: '';
  display: block;
  position: absolute;
  width: 30px;
  height: 30px;
  background-image: url(test-file-stub);
  top: 10px;
  left: 20px;
  color: #ea232d;
}

.c1 {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

.c0 {
  margin-bottom: 40px;
}

.c2 {
  margin-bottom: 30px;
}

.c4 {
  position: relative;
  width: 90%;
  background-color: #fff;
  padding: 30px;
  margin: -30px auto 0;
}

.c8 {
  position: relative;
  width: 90%;
  background-color: #fff;
  padding: 30px;
  margin: -30px auto 0;
}

.c6 {
  color: #ea232d;
  font-style: italic;
}

@media (min-width:40.0625em) {
  .c2 {
    margin-bottom: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:40.0625em) {
  .c3 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

@media (min-width:40.0625em) {
  .c7 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media (min-width:40.0625em) {
  .c4 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    margin: 0;
    margin-left: -30px;
    margin-right: 30px;
  }
}

@media (min-width:40.0625em) {
  .c8 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    margin: 0;
    margin-left: 30px;
    margin-right: -30px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2>
      Testimonials about this cool component
    </h2>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <img
          alt="Collection hero"
          src="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550"
          srcSet="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550 480w,
        //images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550"
        />
      </div>
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <p>
            Some body text
          </p>
          <h2>
            Some header text
          </h2>
          <p>
            <b>
              some bollld text
            </b>
          </p>
        </div>
        <span
          className="c6"
        >
          — 
          Owen, London
        </span>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c7"
      >
        <img
          alt="Collection hero"
          src="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550"
          srcSet="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550 480w,
        //images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?w=550"
        />
      </div>
      <div
        className="c8"
      >
        <div
          className="c5"
        >
          <p>
            Some body text
          </p>
          <h2>
            Some header text
          </h2>
          <p>
            <b>
              some bollld text
            </b>
          </p>
        </div>
        <span
          className="c6"
        >
          — 
          Owen, London
        </span>
      </div>
    </div>
  </div>
</div>
`;
